--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body class="bg-dark text-light">
+    <div id="winbox" class="d-flex justify-content-center align-items-center d-none">
+        <div class="h3" id="wintext"></div>
+    </div>
     <div class="room" id="roombox">
         <div class="container col-6 col-md-3">
             <div class="row">
