--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body class="bg-dark text-light">
-    <div id="winbox" class="d-flex justify-content-center align-items-center d-none">
-        <div class="h3" id="wintext"></div>
-    </div>
     <div class="room" id="roombox">
         <div class="container col-6 col-md-3">
             <div class="row">
@@ -48,6 +45,10 @@
                     <div id="7" class="cell" style='--x:3;--y:1;'></div>
                     <div id="8" class="cell" style='--x:3;--y:2;'></div>
                     <div id="9" class="cell" style='--x:3;--y:3;'></div>
+                </div>
+                <div id="winbox" class="d-flex justify-content-center align-items-center flex-column rounded d-none">
+                    <div class="h1 p-5 border border-light rounded" id="wintext">Draw</div>
+                    <div class="btn btn-outline-light" id="reset">Play Again!</div>
                 </div>
             </div>
         </div>
