--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body class="bg-dark text-light">
-    <div class="room" id="roombox">
-        <div class="container col-6 col-md-3">
-            <div class="row">
-                <input type="text" class="input rounded col-6 offset-3 py-2" placeholder="Room Code" id="room_code">
-            </div>
-            <div class="row px-5 py-2">
-                <div class="btn btn-info col mx-2" id="createbtn">Create</div>
-                <div class="btn btn-success col mx-2" id="joinbtn">Join</div>
-            </div>
-        </div>
-    </div>
+    
     <div class="container">
         <div class="row text-center">
             <div class="h5">BeatThePotatoV2</div>
@@ -49,6 +39,17 @@
                 <div id="winbox" class="d-flex justify-content-center align-items-center flex-column rounded d-none">
                     <div class="h1 p-5 border border-light rounded" id="wintext">Draw</div>
                     <div class="btn btn-outline-light" id="reset">Play Again!</div>
+                </div>
+                <div class="room" id="roombox">
+                    <div class="container col-12">
+                        <div class="row">
+                            <input type="text" class="input rounded col-6 offset-3 py-2 text-center" placeholder="Room Code" id="room_code">
+                        </div>
+                        <div class="row px-5 py-3">
+                            <div class="btn btn-info col mx-2" id="createbtn">Create</div>
+                            <div class="btn btn-success col mx-2" id="joinbtn">Join</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
