--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 </div>
                 <div class="room" id="roombox">
                     <div class="container col-12">
+                        <div class="row mb-1">
+                            <input type="text" class="input rounded col-6 offset-3 py-2 text-center" placeholder="Name" id="username">
+                        </div>
                         <div class="row">
                             <input type="text" class="input rounded col-6 offset-3 py-2 text-center" placeholder="Room Code" id="room_code">
                         </div>
