--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
         <div class="row text-center">
             <div class="h5">BeatThePotatoV2</div>
         </div>
+        <div class="row">
+            <div class="col-10 offset-1 col-md-6 offset-md-3">
+                <div id="alert"></div>
+            </div>
+        </div>
         <div class="row mb-3">
             <div class="col-6 offset-3 col-md-4 offset-md-4">
-                <div id="alert"></div>
+                
                 <div class="row border border-light rounded text-center">
                     <div class="col bg-light text-light text-dark py-2 btn" id="online" onclick="game_mode('ol');">Online</div>
                     <div class="col py-2 btn text-light" id="computer" onclick="game_mode('co');">Computer</div>
