--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="row text-center">
-            <div class="col-12 col-md-6 offset-md-3 d-flex justify-content-center align-items-center gamecol">
+            <div class="col-12 col-md-6 offset-md-3 col-sm-10 offset-sm-1 d-flex justify-content-center align-items-center gamecol px-md-4">
                 <div class="gamebox">
                     <div id="1" class="cell" style='--x:1;--y:1;'></div>
                     <div id="2" class="cell" style='--x:1;--y:2;'></div>
